Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,10 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries.append('Thailand')"
+   ]
   },
   {
    "cell_type": "markdown",
