Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,22 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.index('')\n"
+    "countries.index('New Mexico')\n"
    ]
   },
   {
