--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
     }
    ],
    "source": [
-    "countries.index('New Mexico')\n"
+    "countries.index('New Mexico')\n",
+    "countries[6]\n"
    ]
   },
   {
