Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,8 @@
     }
    ],
    "source": [
-    "countries.index('New Mexico')\n",
+    "change_element = countries.index('New Mexico')\n",
+    "cha\n",
     "\n"
    ]
   },
