Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    ],
    "source": [
     "change_element = countries.index('New Mexico')\n",
-    "cha\n",
+    "change_element = 'USA'\n",
     "\n"
    ]
   },
