--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
     " 'Malta', \n",
     " 'Thailand']\n",
     "countries.index('Thailand')\n",
-    "# countries.pop() # 'Thailand'\n",
+    "# countries.pop(13) # 'Thailand'\n",
     "# countries\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
    ]
