Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,8 +410,8 @@
     " 'South Korea', \n",
     " 'Malta', \n",
     " 'Thailand']\n",
-    "countries.index('Thailand')\n",
-    "countries.pop(countries) # 'Thailand'\n",
+    "no_thai countries.index('Thailand')\n",
+    "countries.pop() # 'Thailand'\n",
     "# countries\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
    ]
