Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -381,16 +381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "'Thailand'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +410,8 @@
     " 'South Korea', \n",
     " 'Malta', \n",
     " 'Thailand']\n",
-    "no_thai countries.index('Thailand')\n",
-    "countries.pop() # 'Thailand'\n",
+    "no_thai = countries.index('Thailand')\n",
+    "countries.pop(no_thai) # 'Thailand'\n",
     "# countries\n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland',  'Argentina', 'Italy', 'Canada', 'South Korea',  'Malta']"
    ]
