Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,28 +451,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
+       "['Morocco',\n",
+       " 'Malta',\n",
        " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'USA',\n",
        " 'Finland',\n",
-       " 'Argentina',\n",
        " 'Italy',\n",
+       " 'USA',\n",
        " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Malta']"
+       " 'Croatia',\n",
+       " 'Argentina',\n",
+       " 'South Korea']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +477,7 @@
    "source": [
     "# unique_countries = \n",
     " \n",
-    "list(set(countries)"
+    "list(set(countries))"
    ]
   },
   {
