Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
    "source": [
     "# unique_countries = \n",
     " \n",
-    "list(set(countries))"
+    "uniqlist(set(countries))"
    ]
   },
   {
