Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,33 +451,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Morocco',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'USA',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Argentina',\n",
-       " 'South Korea']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# unique_countries = \n",
     " \n",
-    "uniqlist(set(countries))"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
