Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = sum(countries) - su\n",
+    "num_of_repeats = sum(countries) - sum(unique_\n",
     "num_of_repeats # 3"
    ]
   },
