--- a/index.ipynb
+++ b/index.ipynb
@@ -515,7 +515,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = sum(list(countries)) - sum(list(unique_countries))\n",
+    "num_of_repeats = sum(list(countries) - sum(list(unique_countries))\n",
     "num_of_repeats # 3"
    ]
   },
