--- a/index.ipynb
+++ b/index.ipynb
@@ -515,7 +515,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = sum(countries) - sum(unique_countries)\n",
+    "num_of_repeats = countries - unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
